--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
+    "bootstrap": "^5.1.3",
     "react-dom": "^17.0.1",
+    "reactstrap": "^9.0.3",
+    "jwt-decode": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
