--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "express-async-handler": "^1.2.0",
     "react-datepicker": "^4.8.0"
   }
 }
