--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
     "bootstrap": "^5.1.3",
-    "react-dom": "^17.0.1",
-    "reactstrap": "^9.0.3",
     "jwt-decode": "^2.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
+    "reactstrap": "^9.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
