--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jsonwebtoken": "^8.5.1",
     "bcrypt": "^5.0.0",
+    "dotenv": "^16.0.1",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0"
   },
   "devDependencies": {
