--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,13 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
     "jwt-decode": "^2.2.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^8.1.1",
     "reactstrap": "^9.0.3",
     "web-vitals": "^0.2.4"
   },
