--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express-async-handler": "^1.2.0",
+    "jwt-decode": "^3.1.2",
     "react-datepicker": "^4.8.0"
   }
 }
